@@ -28,6 +28,7 @@ deps =
         six
         south
         testfixtures
+        django-ranged-response
 
 [testenv:gettext]
 changedir = captcha/locale/
