@@ -5,6 +5,7 @@ Version 0.5.6 (unreleased)
 * Dropped support for PIL (use Pillow instead)
 * Updated documentation (Fixes #122, thanks @claudep)
 * Test against Django 2.0b1
+* Return a Ranged Response when returning WAV audio to support Safari (Fixes #123, thanks @po5i)
 
 
 Version 0.5.5
